--- a/.github/workflows/learn-workflow-simple-2.yml
+++ b/.github/workflows/learn-workflow-simple-2.yml
@@ -6,5 +6,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
-      - run: npm install express
+      - run: npm install -g express
       - run: express --version
